--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "flow": "flow",
         "build": "babel src/ -d lib/",
-        "prepublish": "yarn run build"
+        "prepublish": "yarn run build",
+        "test":"node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "author": "",
     "license": "ISC",
@@ -16,6 +17,10 @@
         "@babel/core": "^7.23.2",
         "@babel/preset-flow": "^7.22.15",
         "flow-bin": "^0.217.2",
+        "jest": "^29.7.0",
         "tailwindcss": "^3.4.1"
+    },
+    "jest":{
+        "transform":{}
     }
 }
