--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,13 @@
-{ "presets": ["@babel/preset-flow"] }
+{
+    "presets": [],
+    "overrides": [
+        {
+            "test": ["**/*.ts", "**/*.tsx"],
+            "presets": ["@babel/preset-typescript"]
+        },
+        {
+            "test": ["**/*.js", "**/*.jsx"],
+            "presets": ["@babel/preset-flow"]
+        }
+    ]
+}
