--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "type": "module",
     "scripts": {
         "flow": "flow",
-        "build": "babel src/ -d lib/",
+        "build_flow": "babel src/ -d lib/",
+        "build_typescript": "npx tsc",
         "prepublish": "yarn run build",
-        "test":"node --experimental-vm-modules node_modules/jest/bin/jest.js"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "author": "",
     "license": "ISC",
@@ -16,11 +17,22 @@
         "@babel/cli": "^7.23.0",
         "@babel/core": "^7.23.2",
         "@babel/preset-flow": "^7.22.15",
+        "@babel/preset-typescript": "^7.24.6",
         "flow-bin": "^0.217.2",
+        "globals": "^15.3.0",
         "jest": "^29.7.0",
-        "tailwindcss": "^3.4.1"
+        "prettier": "3.2.5",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.4.5"
     },
-    "jest":{
-        "transform":{}
+    "jest": {
+        "transform": {}
+    },
+    "dependencies": {
+        "aggregate-error": "^5.0.0",
+        "@babel/preset-env": "^7.24.6",
+        "eslint-plugin-prettier": "^5.1.3",
+        "promises-aplus-tests-refreshed": "^2.3.3",
+        "typescript": "^5.4.5"
     }
 }
